# chattaio

./: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
app/: main.py
app/api/: routes_admin.py  routes_health.py  routes_ingest.py  routes_query.py
app/core/: ingest_queue.py  logging.py  rag_engine.py  settings.py
app/schemas/: admin.py  ingest.py  query.py
app/utils/: file_utils.py  mime_detect.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: ChatThread.tsx  Composer.tsx  MessageBubble.tsx  Sidebar.tsx  UploadCard.tsx
frontend/src/lib/: api.ts  store.tsx  types.ts
tests/: test_smoke.py
